# nba-duckdb-dbt

./: .gitignore  .setup_dbt_var.sh  .sqlfluff  Makefile  README.md  main.py  pyproject.toml
src/ingest/: load.py
src/transform/: profiles.yml
src/transform/nba_analytics/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml
src/transform/nba_analytics/macros/: games_select_metrics.sql
src/transform/nba_analytics/macros/models/: game_get_metric_mean.sql  game_get_metric_net.sql  game_get_metric_rank.sql  game_get_metrics.sql  game_rename_metrics.sql
src/transform/nba_analytics/macros/tests/: test_case.sql
src/transform/nba_analytics/models/: _sources.yml  game_stats.sql  gsw_game_stats.sql  src_nba.yml
src/transform/nba_analytics/models/marts/: _schema.yml  game_stats_team.sql
src/transform/nba_analytics/models/staging/: _schema.yml  stg_game_stats.sql
src/transform/nba_analytics/seeds/: metrics.csv
src/transform/nba_analytics/tests/: test_game_stats.sql
src/transform/nba_analytics/tests/staging/: test_stg_game_stats.sql
tests/ingest/: test_load.py
